apps/services/kasm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasm-ingress
  namespace: kasm
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - kasm.lab.apj.dev
      secretName: lab-apj-dev-tls
  rules:
    - host: kasm.lab.apj.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kasm-proxy
                port:
                  number: 8443
